--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "meal-maker",
   "version": "0.0.0",
   "private": true,
-  "description": "meal-maker ==========",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jemgillam/meal-maker.git"
@@ -16,8 +11,18 @@
   "bugs": {
     "url": "https://github.com/jemgillam/meal-maker/issues"
   },
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "express": "~4.1.2",
+    "express": "~4.0.0",
+    "static-favicon": "~1.0.0",
     "serve-static": "~1.1.0"
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "debug": "~0.7.4",
+    "jade": "~1.3.0",
+    "stylus": "0.42.3"
   }
 }
